[project]
name = "arucomarker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MatsuoReo", email = "reo-robo@outlook.jp" }
]
requires-python = ">=3.13"
dependencies = [
    "opencv-contrib-python>=4.12.0.88",
]

[project.scripts]
arucomarker = "arucomarker:main"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"
